# MTVMTL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dti_data_test.cpp
core/: algo_traits.hpp  data.hpp  data2d.hpp  data3d.hpp  data3d_utils.hpp  enumerators.hpp  func_ptr_utils.hpp  functional.hpp  functional2d.hpp  functional3d.hpp  functional_conflict-20150509-185033.hpp  la_handler.hpp  laparam_manifold.hpp  manifold.hpp  manifold_euc.hpp  manifold_grassmann.hpp  manifold_primary.hpp  manifold_son.hpp  manifold_spd.hpp  manifold_sphere.hpp  matrix_utils.hpp  tvmin.hpp  tvmin_irls.hpp  tvmin_irls3d.hpp  tvmin_prpt.hpp  tvmin_prpt3d.hpp  visualization.hpp  visualization3d.hpp  visualization_conflict-20150701-143128.hpp  visualization_conflict-20150701-143601.hpp
mtvmtl/core/: algo_traits.hpp  data2d.hpp  data3d.hpp  enumerators.hpp  functional2d.hpp  functional3d.hpp  manifold_grassmann.hpp  matrix_utils.hpp  tvmin_irls.hpp  tvmin_irls3d.hpp  tvmin_prpt3d.hpp  visualization.hpp  visualization2d.hpp  visualization3d.hpp
test/: .manifold_test.cpp.swp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  autodiff_test.cpp  brightness_functional_test.cpp  chromaticity_functional_test.cpp  cmake_install.cmake  colorization_test.cpp  data3d_slicing_test.cpp  data3d_test.cpp  data_test.cpp  dti_data_test.cpp  dti_data_test3d.cpp  dti_functional_test.cpp  dti_tvmin_irls_test3d.cpp  dti_tvmin_prpt_test.cpp  dti_tvmin_test.cpp  error_computation_test.cpp  error_computation_test_euc.cpp  error_computation_test_grassmann.cpp  error_computation_test_son.cpp  error_computation_test_spd.cpp  error_computation_test_sphere.cpp  functional3d_test.cpp  functional_test.cpp  grassmannDerTest.cpp  grassmann_chromaticnoise_prpt_test.cpp  grassmann_chromaticnoise_test.cpp  grassmann_chromaticnoise_test2.cpp  grayscale_tvmin_test.cpp  imageNd.hh  imageNd.hpp  inpaint_test.cpp  main.cpp  manifold_grassmann_test.cpp  manifold_son_test.cpp  manifold_spd_test.cpp  manifold_test  (+31 more)
test/cmake/: BU.txt
test/test/: CTestTestfile.cmake  cmake_install.cmake
tex/: .ch_theory.tex.swo  abbreviations.tex  ap_derivatives.tex  ap_listings.tex  ap_perf.tex  ch_abstract.tex  ch_acknowledgements.tex  ch_introduction.tex  ch_library  ch_library._log  ch_library.tex  ch_library_conflict-20150930-205927.tex  ch_numerical_experiments._log  ch_numerical_experiments.tex  ch_numerical_experiments.tex.project.vim  ch_numerical_experiments_conflict-20150916-181550.tex  ch_outlook.tex  ch_theory._log  ch_theory.dvi  ch_theory.tex  ch_theory.tex.project.vim  header_algs.tex  header_gfx.tex  header_listing.tex  header_math.tex  main._aux  main._log  main.abo  main.bbl  main.blg  main.brf  main.dvi  main.ist  main.loa  main.lof  main.lot  main.out  main.tex  main.tex.project.vim  main.toc  (+6 more)
tex/.tmp/T5U5I0/: main.blg  main.brf  main.synctex.gz(busy)
tex/figures/introduction/: plotstep.py
tex/listings/: CMakeLists.txt  colorization_test.cpp  dti_tvmin_prpt_test3d.cpp  son_optical_flow.cpp  tvmin_test.cpp
